@@ -10,9 +10,36 @@
   <groupId>org.eclipse.mylyn</groupId>
   <artifactId>org.eclipse.mylyn.tests.ui</artifactId>
   <version>3.5.0-SNAPSHOT</version>
-  <packaging>eclipse-plugin</packaging>
+  <packaging>eclipse-test-plugin</packaging>
+  <properties>
+    <mylyn-ui-test-suite>org.eclipse.mylyn.tests.ui.AllUiTests</mylyn-ui-test-suite>
+    <mylyn-ui-test-skip>${maven.test.skip}</mylyn-ui-test-skip>
+  </properties>
+  <profiles>
+    <profile>
+      <id>heartbeat</id>
+      <properties>
+        <mylyn-ui-test-skip>true</mylyn-ui-test-skip>
+      </properties>
+    </profile>
+  </profiles>
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.sonatype.tycho</groupId>
+        <artifactId>maven-osgi-test-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <configuration>
+          <useUIHarness>true</useUIHarness>
+          <useUIThread>true</useUIThread>
+          <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
+          <testSuite>org.eclipse.mylyn.tests.ui</testSuite>
+          <testClass>${mylyn-ui-test-suite}</testClass>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.io.tmpdir=${project.build.directory} ${mylyn-test-args}</argLine>
+          <appArgLine>${mylyn-test-app-args}</appArgLine>
+          <skip>${mylyn-ui-test-skip}</skip> 
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.sonatype.tycho</groupId>
         <artifactId>maven-osgi-source-plugin</artifactId>
